SERVER-6832 make 'move-top-chunk' heuristic work with prefix shard keys